--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello World</title>
-	
+	<script type="module" src="script.js"></script>
 </head>
 <body>
 	<h1>Home Work 11. Module’</h1>
@@ -19,6 +19,5 @@
         </div>
         <button type="submit" class="btn">Додати </button>
       </form>
-      <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
