--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<script type="module" src="script.js"></script>
 </head>
 <body>
-	<h1>Home Work 11. Module’</h1>
+	<h1>Home Work 11. Module</h1>
       <form class="create-form">
-      	<p>Типовий Array:</p>
-      	<div id="array"></div>
-      	<p>Типовий Set:</p>
-      	<div id="set"></div>
+      	<div>Типовий Array: [
+      	<span id="array"> </span>]</div>
+      	<div>Типовий Set: [
+      	<span id="set"></span> ]</div>
 
         <div class="input-field">
           <input type="text" value='' name="task" class="input-emoji">
