--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hello World</title>
+	<link rel="stylesheet" href="./style.css">
 	<script type="module" src="script.js"></script>
 </head>
 <body>
 	<h1>Home Work 11. Module</h1>
       <form class="create-form">
-      	<div>Типовий Array: [
+      	<div class="block">Типовий Array: [
       	<span id="array"> </span>]</div>
-      	<div>Типовий Set: [
+      	<div class="block">Типовий Set: [
       	<span id="set"></span> ]</div>
 
-        <div class="input-field">
+       
           <input type="text" value='' name="task" class="input-emoji">
-        </div>
+        
         <button type="submit" class="btn">Додати </button>
       </form>
 </body>
